export interface Supplier {
    id: string;
    name: string
    contact_person: string
    email: string;
    address: string
    is_active?: boolean
}